# Sandbox

./: .gitignore  README.md  Tooling.md  min_heap.cpp
assembly/: resources.txt
cpp/: crin.cpp  vocab.txt
cpp/algorithms/: lcs.h
cpp/blog/: Counter.x.cpp  spinlock_mutex.h
cpp/concurrent_servers/: async-servers.cpp  async-servers.h  async-servers.x.cpp  polling_server.x.cpp  sequential_server.cpp  sequential_server.h  sequential_server.x.cpp  server-test.py  simple_client.py  threaded_server.cpp  threaded_server.h  threaded_server.x.cpp  threadpool-server.py  utils.cpp  utils.h
cpp/cppcon20/: CMakeLists.txt  conanfile.txt
cpp/cppcon20/01_oneTBB_Hello_TBB/before/: hello-tbb-parallel.cpp  hello-tbb.cpp
cpp/cppcon20/01_oneTBB_Hello_TBB/solutions/: hello-tbb-solved.cpp
cpp/cppcon20/02_oneTBB_algorithms/before/: pi-parallel.cpp  pi-serial.cpp  pipeline-parallel.cpp  pipeline-serial.cpp
cpp/cppcon20/02_oneTBB_algorithms/common/: case.cpp
cpp/cppcon20/02_oneTBB_algorithms/solutions/: pipeline-solution.cpp
cpp/cppcon20/05_oneTBB_controlling_max_concurrency/before/: scalability-gc-ta.cpp  scalability-gc.cpp  scalability-no-controls.cpp  split-default.cpp  split-evenly.cpp  split-unevenly.cpp
cpp/cppcon20/05_oneTBB_controlling_max_concurrency/common/: test_function.h
cpp/cppcon20/07_oneTBB_observers/before/: observer.cpp
cpp/cppcon20/10_oneTBB_composability/lab/: cholesky.cpp  init.cpp  mat_mul.cpp
cpp/cppcon20/examples/: first.cpp
cpp/deep-cmake/: CMakeLists.txt  README.md  conanfile.txt  main.cpp  mylib.cpp  mylib.h
cpp/eigen/: CMakeLists.txt  conanfile.txt  etl.cpp  etl.h  main.cpp
cpp/hackerrank/: algorithm.cpp  cabs.cpp  kmp.cpp  knights_quest.cpp  levenshtein.cpp  linked_loop.cpp  longadd.cpp  max_profit.cpp  palindrome.cpp  temp.cpp  unique.cpp  zombie.cpp
cpp/leetcode/: BestTime.cpp  BitCount.cpp  TwoSum.cpp  binary_tree.cpp  combination_sum.cpp  copy_list.cpp  longest_substring.cpp  max_subarray.cpp  next_permutation.cpp  perfect_squares.cpp  perm.cpp  serialization.cpp  stack.cpp  traversal.cpp  trie.cpp  vec.cpp
cpp/llvm-tagchecker/: CMakeLists.txt  TagChecker.cpp  foo.sh
cpp/pipe/: bandwidth.py  client.py  exercise1.py  exercise2.cpp  exercise2.h  exercise2.x.cpp  fifo.py  ls-wc.py  main.cpp  server.py
cpp/reflection_printer/: StructPrinter.h  TypeTraits.h  print_struct.cpp
cpp/stdlib/: my_shared_ptr.cpp  my_variant.cpp  tuple.cpp
haskell/: 99problems.hs  DistanceConversions.hs  Shape.hs  euler.hs  fizzbuzz.hs  github.hs  london.hs  monad.hs  pipeline.hs  practise.hs  solveRPN.hs
haskell/cpp_hs/: max.cpp  misc.cpp  shape.h  transform.cpp  types.cpp
haskell/cpp_hs/pipeline/: IObserver.h  IStage.h  Pipeline.h  main.cpp
haskell/todo/: tasks.txt  todo.hs
haskell/upenn/adt/: LogAnalysis.hs
haskell/upenn/intro/: credicard.hs  hanoi.hs
haskell/upenn/poly/: Golf.hs
python/: raymond_hashtable.py  table.py
python/build_async/: example.py
python/cpython/: CMakeLists.txt  conanfile.txt  derived.cpp  example.cpp  foo.cpp  test.py
python/hardway/ex4/: simple.py
python/io_examples/: input_example.py
python/morsels/: add.py  circle.py  compact.py  count.py  earliest.py  parse_ranges.py  tail.py  test_add.py  test_circle.py  test_compact.py  test_count.py  test_earliest.py  test_parse_ranges.py  test_tail.py  utils.py
python/package/: pyproject.toml
python/pluralsight/: Info.md  table.py
python/teaching/: longest_substring_without_repeat.py
python/teaching/money_problem/: data  gen.py  problem.ipynb  read.py  shalabh.py
