[tool.poetry]
name = "mypackage"
version = "0.1.0"
description = "test package"
authors = ["skgbanga <sandeep.skg3@gmail.com>"]

packages = [
  { include='mypackage', from='src' }
]

[tool.poetry.dependencies]
python = "^3.6"
google-cloud-firestore = "^1.9.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
